--- a/Pipfile
+++ b/Pipfile
@@ -25,13 +25,14 @@ itypes = "==1.1.0"
 "Jinja2" = "==2.9.6"
 MarkupSafe = "==1.0"
 openapi-codec = "==1.3.2"
-raven = "*"
 drf-hal-json = { git = "https://github.com/Artory/drf-hal-json" }
 XlsxWriter = "==1.0.2"
 xlwt = "==1.3.0"
 django-autocomplete-light = "*"
 "psycopg2-binary" = "*"
 django-templated-email = "*"
+uwsgi = "*"
+sentry-sdk = "*"
 
 [dev-packages]
 pytest = "*"
@@ -49,6 +50,9 @@ django-extensions = "*"
 ipdb = "*"
 tox = "*"
 coverage = "*"
+ipython = "*"
+rows = {version = "*", extras = ["ods"]}
+django-debug-toolbar = "*"
 
 [requires]
 python_version = "3.6"
