--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 adesao/static/* linguist-vendored
 snc/static/* linguist-vendored
+snc/templates/* linguist-vendored
 snc/templates/termos/* linguist-vendored
 snc/templates/emails/* linguist-vendored
