--- a/charts/sistema-nacional-cultura/templates/deployment.yaml
+++ b/charts/sistema-nacional-cultura/templates/deployment.yaml
@@ -1,47 +1,25 @@
-apiVersion: extensions/v1beta1
-kind: Deployment
+apiVersion: apps.openshift.io/v1
+kind: DeploymentConfig
 metadata:
-  name: {{ template "fullname" . }}
-  labels:
-    draft: {{ default "draft-app" .Values.draft }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+  name: "{{ .Chart.Name }}"
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: 1
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
-        draft: {{ default "draft-app" .Values.draft }}
-        app: {{ template "fullname" . }}
-{{- if .Values.podAnnotations }}
+        name: "{{ .Chart.Name }}"
       annotations:
-{{ toYaml .Values.podAnnotations | indent 8 }}
-{{- end }}
     spec:
       containers:
-      - name: {{ .Chart.Name }}
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
+      - image: {{  .Values.django.djangoappImage }}:{{ required "Missing .Chart.appVersion" .Chart.AppVersion }}
+        name: djangoapp-django
         ports:
-        - containerPort: {{ .Values.service.internalPort }}
-        lifecycle:
-          postStart:
-            exec:
-              command: ["python", "/code/manage.py", "runserver 0.0.0.0:8000"]
-        livenessProbe:
-          httpGet:
-            path: {{ .Values.probePath }}
-            port: {{ .Values.service.internalPort }}
-          initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
-          periodSeconds: {{ .Values.livenessProbe.periodSeconds }}
-          successThreshold: {{ .Values.livenessProbe.successThreshold }}
-          timeoutSeconds: {{ .Values.livenessProbe.timeoutSeconds }}
-        readinessProbe:
-          httpGet:
-            path: {{ .Values.probePath }}
-            port: {{ .Values.service.internalPort }}
-          periodSeconds: {{ .Values.readinessProbe.periodSeconds }}
-          successThreshold: {{ .Values.readinessProbe.successThreshold }}
-          timeoutSeconds: {{ .Values.readinessProbe.timeoutSeconds }}
-        resources:
-{{ toYaml .Values.resources | indent 12 }}
-      terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
+          - containerPort: 8000
+            protocol: "TCP"
+        env:
+          - name: DATABASE_URL
+            value: "{{ .Values.django.database_url }}"
+          - name: ALLOWED_HOSTS
+            value: "{{ .Values.django.allowed_hosts }}"
