--- a/charts/sistema-nacional-cultura/templates/service.yaml
+++ b/charts/sistema-nacional-cultura/templates/service.yaml
@@ -1,23 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-{{- if .Values.service.name }}
-  name: {{ .Values.service.name }}
-{{- else }}
   name: {{ template "fullname" . }}
-{{- end }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-{{- if .Values.service.annotations }}
-  annotations:
-{{ toYaml .Values.service.annotations | indent 4 }}
-{{- end }}
 spec:
-  type: {{ .Values.service.type }}
   ports:
-  - port: {{ .Values.service.externalPort }}
-    targetPort: {{ .Values.service.internalPort }}
-    protocol: TCP
-    name: http
+    - name: {{.Values.django.applicationPort }}-tcp
+      port: {{.Values.django.applicationPort }}
+      protocol: TCP
+      targetPort: {{.Values.django.applicationPort }}
   selector:
-    app: {{ template "fullname" . }}
+    deploymentconfig: "{{ .Chart.Name }}"
+  sessionAffinity: None
+  type: ClusterIP
+
